src/main/css/bdrs/bdrs.css
/* ... */
.buttonpanel {
    padding: 0.5em 0em 0.5em 0em;
}

/* used when you want the buttons to appear to the right of a form.
 */
.buttonPanelRight{
	/* Using negative margin here because having a float:right element inside a 
	 * jquery-ui dialog will cause the dialog to blow up to 100% screen width
	 * in IE7. Using a negative margin like this allows us to bump up the 
	 * button panel without taking it out of normal document flow.
	 * 
	 * Yes, i know it's a hack.
	 */
	margin-top:-47px;
}

.widgetSearchForm {
	padding: 0 0 1em 0;
}

.max_size_img {
    max-width: 250px;
    max-height: 140px;
    
    -webkit-box-shadow: 2px 2px 2px #DCDCDC;
    -moz-box-shadow: 2px 2px 2px #DCDCDC;
    box-shadow: 2px 2px 2px #DCDCDC;
}

/************************************/
/* Default Styling                  */
/************************************/
html {
    background: #ECECEC;
}

/* so the embedded widget blend seamlessly into target page */
html.embed {
    background: transparent;
}

h1 {
    color: #333333;
    font-size: 200%;
    font-weight: bold;
    line-height: 100%;
    padding: 10px 0;
	margin: 0.25em; 
}

h2 {
    color: #333333;
    font-size: 165%;
    font-weight: bold;
    line-height: 100%;
    padding: 10px 0;
	margin: 0.25em;
}

h3 {
    color: #333333;
    font-size: 135%;
    font-weight: bold;
    padding: 10px 0;
	margin: 0.25em;
}

/* overriding the YUI defaults */
table {
	margin-bottom: 0;
}

.sep {
    border-top: 1px solid #D3D3D3;
}

.sepBottom {
    border-bottom: 1px solid #D3D3D3;
}

.sepBottomDotted {
    border-bottom: 1px dotted #D3D3D3; 
}

.wrapper {
    padding-top: 0px;
    margin: 0px auto;
    width: 868px;
}

/**************************/
/* Dashboard styling      */
/**************************/
.dashboardContainer {
    width: 100%;
	background-color: #FFFFFF;
	-webkit-border-bottom-right-radius: 20px;
    -webkit-border-bottom-left-radius: 20px;
    -moz-border-radius-bottomright: 20px;
    -moz-border-radius-bottomleft: 20px;
    border-bottom-right-radius: 20px;
    border-bottom-left-radius: 20px;
}

.dashboardFooter {
	clear: both;
}

.dashboard {
    width: 0px;
    float: left;
    background-color: #8b883c;
}

.contentwrapper {
    background-color: #FFFFFF;
    background-repeat: repeat;
    padding: 20px;
}

a:link, a:visited, a:visited.neverVisited {
    color:#0088CC;
}

a:link, a:visited {
    text-decoration:none;
}

a:link.delete, a:visited.delete {
    color: red;
}

.pageContent {
    color: #333333;
    font-size: 12px;
    line-height: 135%;
    padding-left: 10px;
    padding-right: 10px;
}

.message {
    color: red;
}

th, td {
    border: none;
    border-collapse: collapse;
}

input[type=text], input[type=password], textarea {
    padding: 0px 0px 0px 4px;

    /* Rounded Border */
    border: 1px solid #787C89;
    -webkit-border-radius: 4px;
    -khtml-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
}

textarea {
    resize: both;
}

input[type=text], input[type=password] {
    resize: horizontal;
}

input[readonly],
input[disabled] {
    background-color: #DDDDDD;
}

.map_wrapper {
    color: #484848;
	/* IE7 fix for slideToggling the map wrapper */
	zoom:1;
}

/* Make the lat and lon coordinates on the bottom right, white */
.map_wrapper .olControlMousePosition {
    color: #FFFFFF;
}

.mapLogoMax {
	position: fixed;
	bottom: 100px;
	left: 2px;
	z-index: 1600;
}

.mapLogoMin {
	display:none;
}

.shrinkMapLink {
	border-radius: 0.5em;
	 -webkit-border-radius: 0.5em;
    -khtml-border-radius: 0.5em;
    -moz-border-radius: 0.5em;

	background: white;
   
	padding: 0.2em 1em 0.2em 1em;
	
	position: fixed;
	top: 3px;
	right: 3px;
	z-index: 3100;
}

.align_radio input[type=radio]{
    vertical-align: text-bottom;
}

.align_checkbox input[type=checkbox]{
    vertical-align: text-bottom;
}

/************************************/
/* Signin  Styling                  */
/************************************/
#signin input[type=text],
#signin input[type=password] {
    border: 1px solid #5D5D5D;
}

/************************************/
/* Geocode Styling                  */
/************************************/
.geocode {

    text-align: center;
    margin: 0px auto;
    position: relative;
    z-index: 1200;
    bottom: 45px;
    width: 500px;
    height: 20px;
}

.geocode input[type=text] {
    width: 75%;
    height: 21px;
    background-color: #e1e1e1;
    border-color: #000000;
}

.geocode input[type=submit] {
    width: 80px;
    height: 23px;
    vertical-align: bottom;
}

/************************************/
/* Admin Survey Taxonomy, Users     */
/************************************/

table.surveyOptionTable th {
    width:45%;
}

table.surveyOptionTable td {
	width:55%;
}

#userSelectionTypeFieldSet,
#speciesListTypeFieldSet {
    padding-left: 4em;
}

#userSelectionTypeFieldSet label,
#speciesListTypeFieldSet label {
    padding-left: 0.5em;
}

/* Taxonomy */
#add_species_wrapper {
    padding-left: 33%;
}

.speciesListChoice {
    padding: 0.2em 0em 0.2em 0em;
}

.speciesListChoice label {
    width: 25%;
}

ul.ui-menu li.ui-menu-item {
    list-style-type: none;
}

/************************************/
/* Location Table                   */
/************************************/

#locationTable {
    margin-top: 1em;
}

#locationTable input {
    width: 100%;
}

/************************************/
/* Yearly Sightings                 */
/************************************/
.yearlysightings {
    border:collapse;
}

table.yearlysightings {
	width: 100%;
}

.yearlysightings th {
    text-align: center;
}

.yearlysightings td.errorCell {
    background-color: #FF4040;
}

.yearlysightings td {
    text-align: center;
    border:collapse;
    border: 1px solid #C0C0C0;
    margin: 0;
    padding: 0;
}

.yearlysightings .today {
    background-color: #FFE2B4;
}
/* ... */

